re PR target/31568 (ICE with invalid %y operand (inline-asm))

2008-07-15  Andrew Pinski  <andrew_pinski@playstation.sony.com>

        PR target/31568
        * config/rs6000/rs6000.c (print_operand <case 'y'>): Don't use
        gcc_assert, instead call output_operand_lossage.

2008-07-15  Andrew Pinski  <andrew_pinski@playstation.sony.com>

        PR target/31568
        * gcc.target/powerpc/asm-y.c: New testcase.

From-SVN: r137837